--- a/Part2/amazon.html
+++ b/Part2/amazon.html
@@ -202,6 +202,7 @@
       </div>
     </div>
 
-    <script src="scripts/amazon.js"></script>
+    <script src="data/products.js"></script> <!--Adds products array-->
+    <script src="scripts/amazon.js"></script> <!--Adds the script for creating HTML from products above. Order matters!-->
   </body>
 </html>
