--- a/Part2/amazon.html
+++ b/Part2/amazon.html
@@ -201,8 +201,7 @@
         </div>
       </div>
     </div>
-    <script src="data/cart.js"></script>
     <script src="data/products.js"></script> <!--Adds products array-->
-    <script src="scripts/amazon.js"></script> <!--Adds the script for creating HTML from products above. Order matters!-->
+    <script type="module" src="scripts/amazon.js"></script> <!--Adds the script for creating HTML from products above. Order matters!-->
   </body>
 </html>
