--- a/Part2/amazon.html
+++ b/Part2/amazon.html
@@ -201,6 +201,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="scripts/amazon.js"></script> <!--Adds the script for creating HTML from products above. Order matters!-->
+    <script type="module" src="scripts/amazon.js"></script> <!--Entry point-->
   </body>
 </html>
