--- a/Part2/tests-jasmine/tests.html
+++ b/Part2/tests-jasmine/tests.html
@@ -13,11 +13,13 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-  <script src="moneyTest.js" type="module"></script>
- 
-
+  <script src="../tests/moneyTest.js" type="module"></script>
+  <!--<script src="../data/cartTest.js"type="module"></script> -->
+  <script src="../tests/checkout/orderSummaryTest.js" type="module"></script>
+<!--DOESN't work-->
 </head>
 
 <body>
+  <div class="js-test-container"></div>
 </body>
 </html>
